<resources>
    <string name="app_name">Omah Kos</string>
    <string name="lupa_password"><u>Lupa Password?</u></string>
    <string name="selamat_datang_kembali">Selamat datang kembali</string>
    <string name="tolong_isi_data_dirimu_untuk_masuk_sebagai_pencari_kost">Tolong isi data dirimu untuk masuk</string>
    <string name="tolong_isi_data_dirimu_untuk_masuk_sebagai_penyewa_kost">Tolong isi data dirimu untuk masuk sebagai penyewa kost</string>
    <string name="login_image_1">Login image 1</string>
    <string name="email">Email</string>
    <string name="masukkan_alamat_email_anda">Masukkan alamat email anda</string>
    <string name="password">Password</string>
    <string name="masukkan_password_anda">Masukkan password anda</string>
    <string name="ingat_dalam_30_hari">Ingat dalam 30 hari</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_gratis">Daftar gratis!</string>
    <string name="line_login">Line login</string>
    <string name="pencari_kos">\t\t\t\tPencari Kost</string>
    <string name="silahkan_pilih_kamu_ingin_masuk_sebagai_apa">Silahkan pilih kamu ingin daftar sebagai apa :)</string>
    <string name="penyewa_kos">\t\t\t\tPenyewa Kost</string>
    <string name="auth_background_1">Auth background 1</string>
    <string name="selamat_datang_di_omah_kost">Selamat datang di Omah Kost</string>
    <string name="filter">Filter</string>
    <string name="kos_terlaris">Kos Terlaris</string>
    <string name="filter_text">Filter</string>
    <string name="favorit">Favorit</string>
    <string name="riwayat">Riwayat</string>
    <string name="profil">Profil</string>
    <string name="home">Home</string>
    <string name="dengan_mendaftar_saya_menyetujui_kebijakan_privasi">Dengan mendaftar, saya menyetujui <b>kebijakan privasi</b></string>
    <string name="daftar_sebagai_pencari_kos">Daftar sebagai Pencari Kos</string>
    <string name="daftar_sebagai_penyewa_kos">Daftar sebagai Penyewa Kos</string>
    <string name="yuk_lengkapi_data_diri_supaya_bisa_masuk_ke_omah_kost">Yuk, lengkapi data diri supaya bisa masuk ke Omah Kost!</string>
    <string name="nama">Nama Lengkap</string>
    <string name="no_hp">No. HP</string>
    <string name="masukkan_nomor_handphone_anda">Masukkan nomor handphone anda</string>
    <string name="masukkan_nama_anda">Masukkan nama lengkap anda</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_di_sini">Masuk di sini!</string>
    <string name="masukkan_username_anda">Masukkan username anda</string>
    <string name="username">Username</string>
    <string name="kos_title_here">Kos Title Here</string>
    <string name="kos_location">Kos Location</string>
    <string name="rp1_225_000"><strike>Rp1.225.000</strike></string>
    <string name="per_month">/bulan</string>
    <string name="rate_5">5/5</string>
    <string name="verif_image">Verif Image</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="masukkan_kode_verifikasi_yang_sudah_kami_kirim_ke_emailmu">Masukkan kode verifikasi yang sudah kami kirim ke emailmu</string>
    <string name="kode_verifikasi">Kode Verifikasi</string>
    <string name="category">Category</string>
    <string name="cari_kos_sekarang">Cari kos sekarang</string>
    <string name="tukar_poin"><![CDATA[Tukar Poin >]]></string>
    <string name="edit_profil">Edit Profil</string>
    <string name="pesanan_saya">Pesanan Saya</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="undang_teman_dan_dapatkan_poin">Undang Teman dan Dapatkan Poin</string>
    <string name="voucher">Voucher</string>
    <string name="khusus_untuk_kamu">Khusus Untuk Kamu</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="connect_with_us">Connect With Us</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="bantuan">Bantuan</string>
    <string name="lainnya">Lainnya</string>
    <string name="filter_pencarian">Filter Pencarian</string>
    <string name="close_filter">Close Filter</string>
    <string name="terapkan">Terapkan</string>
    <string name="reset">Reset</string>
    <string name="tipe_kost">Tipe Kost</string>
    <string name="man_type">Man type</string>
    <string name="putra">Putra</string>
    <string name="woman_type">Woman Type</string>
    <string name="putri">Putri</string>
    <string name="man_woman_type">Man Woman Type</string>
    <string name="campur">Campur</string>
    <string name="lama_sewa_kost">Lama Sewa Kost</string>
    <string name="harian">Harian</string>
    <string name="bulanan">Bulanan</string>
    <string name="tahunan">Tahunan</string>
    <string name="harga">Harga</string>
    <string name="minimal">Minimal</string>
    <string name="dash">-</string>
    <string name="rp_20_000_000">Rp. 20.000.000</string>
    <string name="rp_20_000">Rp. 20.000</string>
    <string name="fasilitas_umum">Fasilitas Umum</string>
    <string name="aturan_kos">Aturan Kos</string>
    <string name="akses_24_jam">Akses 24 Jam</string>
    <string name="boleh_pasutri">Boleh Pasutri</string>
    <string name="maks_2_orang_kamar">Maks. 2 orang/kamar</string>
    <string name="boleh_bawa_hewan">Boleh Bawa Hewan</string>
    <string name="khusus_karyawan">Khusus Karyawan</string>
    <string name="harga_termasuk_listrik">Harga termasuk listrik</string>
    <string name="check_in_di_jam_14_00_sewa_harian_amp_mingguan"><![CDATA[Check in di jam 14.00 (sewa harian & \nmingguan)]]></string>
    <string name="check_out_di_jam_12_00_sewa_harian_amp_mingguan"><![CDATA[Check out di jam 12.00 (sewa harian & \nmingguan)]]></string>
    <string name="fasilitas_kamar">Fasilitas Kamar</string>
    <string name="mengirim_ulang_otp_dalam">Mengirim ulang OTP dalam</string>
    <string name="_00_00">00:00</string>
    <string name="kirim_ulang_otp">Kirim Ulang OTP</string>
    <string name="data_kosong">Data kosong</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="asal_kota">Asal Kota</string>
    <string name="profesi">Profesi</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="nama_pemilik_bank">Nama Pemilik Bank</string>
    <string name="bulan">/bulan</string>
    <string name="rp_2_120_000">Rp 2.120.000</string>
    <string name="rp_3_120_000">Rp 3.120.000</string>
    <string name="_20">20%</string>
    <string name="ajukan_sewa">Ajukan Sewa</string>
    <string name="icon_icon">Icon icon</string>
    <string name="ac">AC</string>
    <string name="icon_star">Icon star</string>
    <string name="_5_0">5,0</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_n_adipiscing_elit_etiam_eu_turpis_molestie_n_dictum_est_a_mattis_tellus_sed_dignissim_nmetus_nec_fringilla_accumsan_risus_sem_n_sollicitudin_lacus">Lorem ipsum dolor sit amet, consectetur\n adipiscing elit. Etiam eu turpis molestie,\n dictum est a, mattis tellus. Sed dignissim, \nmetus nec fringilla accumsan, risus sem\n sollicitudin lacus,</string>
    <string name="budi_setiawan">Budi Setiawan</string>
    <string name="_1_minggu_yang_lalu">1 minggu yang lalu</string>
    <string name="icon_close">Icon close</string>
    <string name="whoooshh">Whoooshh</string>
    <string name="yeay_verifikasi_berhasil_n_kami_antar_ke_rumah_n_kost_impianmu_yuk">Yeay, verifikasi berhasil!\n Kami antar ke rumah\n kost impianmu yuk</string>
    <string name="kamar_mandi_dalam">Kamar Mandi Dalam</string>
    <string name="icon_back">Icon back</string>
    <string name="tulis_nama_daerah_atau_kota">Tulis nama daerah atau kota</string>
    <string name="tipe_kos">Tipe Kos</string>
    <string name="waktu_bayar_kos">Waktu Bayar Kos</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="urutkan">Urutkan</string>
    <string name="kost_karawaci_village_10">Kost Karawaci Village 10</string>
    <string name="karawaci_tangerang">Karawaci, Tangerang</string>
    <string name="image_room">Image Room</string>
    <string name="_4_5">4.5</string>
    <string name="sisa_2_kamar">Sisa 2 kamar</string>
    <string name="rp_980_000_bulan">Rp 980.000 /bulan</string>
    <string name="icon_like">Icon like</string>
    <string name="banner_homepage">Banner homepage</string>
    <string name="icon_share">Icon share</string>
    <string name="lihat_semua_foto">Lihat semua foto</string>
    <string name="foto">Foto</string>
    <string name="video">Video</string>
    <string name="kost_pondok_indah_tipe_a_jakarta_selatan_acp553r">Kost Pondok Indah Tipe A Jakarta Selatan ACP553R</string>
    <string name="kost_campur">Kost Campur</string>
    <string name="_4_8">4,8</string>
    <string name="_5">/5</string>
    <string name="jl_tanah_ara_ii_no_16_rt_4_rw_12_pd_indah">Jl. Tanah Ara II No.16, RT.4/RW.12, Pd. Indah</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="tentang_kost">Tentang Kost</string>
    <string name="kost_ini_terdiri_dari_2_lantai_tipe_kamar_a_berada_di_lantai_2_dengan_jendela_yang_menghadap_ke_arah_luar_apabila_anda_membutuhkan_bantuan_anda_dapat_menghubungi_penjaga_yang_bertugas_dari_pukul_08_00_17_30_wib_informasi_fasilitas_daya_listrik_3500_va_pascabayar_sumber_air_sumur_wifi_indihome_30_mbps_kapasitas_parkir_10_motor_dan_10_sepeda_biaya_tambahan_bisa_berdua_400_ribu_tamu_menginap_50_ribu_kost_ini_berlokasi_3_menit_dari_jalan_raya_dengan_akses_yang_tidak_dapat_dilalui_oleh_mobil_berada_di_area_perkampungan_dan_lingkungan_kost_yang_bebas_dari_banjir">Kost ini terdiri dari 2 lantai. Tipe kamar A berada di lantai 2 dengan jendela yang menghadap ke arah luar. Apabila Anda membutuhkan bantuan, Anda dapat menghubungi penjaga yang bertugas dari pukul 08.00–17.30 WIB. Informasi fasilitas: Daya listrik : 3500 VA (Pascabayar) Sumber air : Sumur Wifi : Indihome - 30 Mbps Kapasitas parkir : 10 motor dan 10 sepeda Biaya tambahan:Bisa BERDUA +400 Ribu Tamu menginap +50 Ribu Kost ini berlokasi 3 menit dari jalan raya dengan akses yang tidak dapat dilalui oleh mobil, berada di area perkampungan, dan lingkungan kost yang bebas dari banjir.</string>
    <string name="tampilkan">Tampilkan</string>
    <string name="review">Review</string>
    <string name="_17_ulasan">(17 Ulasan)</string>
    <string name="dian">Dian</string>
    <string name="pemilik_kost">Pemilik Kost</string>
    <string name="tanya_pemilik_kost">Tanya Pemilik Kost</string>
    <string name="keuntungan_memilih_kost_disini">Keuntungan Memilih Kost disini…</string>
    <string name="dikelola_omah_kos_aman_dan_nnyaman">Dikelola Omah Kos, Aman dan \nNyaman</string>
    <string name="data_pada_kost_ini_dicek_ulang_oleh_tim_nomah_kos_sehingga_terjamin_keamanan_ndan_kenyamanannya">Data pada kost ini dicek ulang oleh tim\nOmah Kos sehingga terjamin keamanan \ndan kenyamanannya.</string>
    <string name="pro_service">Pro Service</string>
    <string name="ditangani_secara_profesional_oleh_tim_nomah_kos_sehingga_kamu_tidak_perlu_nkhawatir">Ditangani secara profesional oleh tim \nOmah Kos sehingga kamu tidak perlu \nkhawatir</string>
    <string name="bisa_refund">Bisa Refund</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetu_naid_odio_donec">Lorem ipsum dolor sit amet consectetu \naId odio donec</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="lokasi">Lokasi</string>
    <string name="tipe_kamar_lainnya">Tipe Kamar Lainnya</string>
    <string name="aturan_kost">Aturan Kost</string>
    <string name="logout">Logout</string>
    <string name="fullname">FullName</string>
    <string name="_0">0</string>
    <string name="akun">Akun</string>
    <string name="hapus_akun">Hapus Akun</string>
</resources>