<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.logout.LogoutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/profileSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/profile_empty" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fullname"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_no_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/coinCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileSection">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/_0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableStartCompat="@drawable/coin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/tukar_poin"
                    android:textColor="@color/primary"
                    android:textSize="14sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/accountSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coinCard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/akun"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:text="@string/edit_profil"
                app:drawableStartCompat="@drawable/pencil" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:text="@string/pesanan_saya"
                app:drawableStartCompat="@drawable/paper" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:text="@string/ubah_kata_sandi"
                app:drawableStartCompat="@drawable/lock" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:text="@string/hapus_akun"
                app:drawableStartCompat="@drawable/trash" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forYouSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountSection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khusus_untuk_kamu"
                android:layout_margin="16dp"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:drawablePadding="12dp"
                android:text="@string/voucher"
                app:drawableStartCompat="@drawable/voucher" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:drawablePadding="12dp"
                android:text="@string/undang_teman_dan_dapatkan_poin"
                app:drawableStartCompat="@drawable/invite_person" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/othersSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forYouSection">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lainnya"
                android:layout_margin="16dp"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:drawablePadding="12dp"
                android:text="@string/bantuan"
                app:drawableStartCompat="@drawable/customer_service" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:drawablePadding="12dp"
                android:text="@string/tentang_kami"
                app:drawableStartCompat="@drawable/group" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:drawablePadding="12dp"
                android:text="@string/connect_with_us"
                app:drawableStartCompat="@drawable/connect_without_contact" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:drawablePadding="12dp"
                android:text="@string/syarat_dan_ketentuan"
                app:drawableStartCompat="@drawable/file_copy" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:drawablePadding="12dp"
                android:text="@string/kebijakan_privasi"
                app:drawableStartCompat="@drawable/file_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/background"
            app:layout_constraintTop_toBottomOf="@+id/othersSection"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="68dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="18dp"
                android:text="@string/logout"
                android:textSize="14sp"
                android:textColor="@color/error"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/logout" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
