<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".view.ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/tv_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/selamat_datang_kembali"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tolong_isi_data_dirimu_untuk_masuk_sebagai_pencari_kost"
            android:textColor="#787579"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title" />

        <ImageView
            android:id="@+id/iv_login_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_description"
            app:srcCompat="@drawable/image_login_1"
            android:contentDescription="@string/login_image_1" />

        <TextView
            android:id="@+id/tv_email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_1" />

        <com.binar.kos.view.customView.CustomEmailEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_title">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/masukkan_alamat_email_anda"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:autofillHints="" />
        </com.binar.kos.view.customView.CustomEmailEditText>

        <TextView
            android:id="@+id/tv_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <com.binar.kos.view.customView.CustomPasswordEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_title">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/masukkan_password_anda"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:autofillHints="" />
        </com.binar.kos.view.customView.CustomPasswordEditText>

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingat_dalam_30_hari"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/lupa_password"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="2dp"
            app:backgroundTint="@null"
            android:background="@drawable/custom_button"
            android:textColor="@drawable/custom_button_text"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

        <TextView
            android:id="@+id/tv_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/belum_punya_akun"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_btn_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <Button
            android:id="@+id/tv_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textAllCaps="false"
            android:letterSpacing="0"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/daftar_gratis"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_to_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_btn_register"
            app:layout_constraintStart_toStartOf="@+id/tv_btn_register"
            app:layout_constraintTop_toBottomOf="@+id/tv_btn_register"
            app:srcCompat="@drawable/auth_line"
            android:contentDescription="@string/line_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>